# coinmarketcap_exchangerate

./: .gitignore  License.md  README.md  example.py  pyproject.toml  setup.py
coinmarketcap_exchangerate/: __init__.py  price_fetcher.py
db/: exchange_rate_currencies.json
tests/: test_price_fetcher.py
