[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinmarketcap-exchangerate"
version = "1.0"
authors = [
    {name = "Droonacharya Ko Chelo", email = "droonacharyakohelo@gmail.com"},
]
description = "A Python module to fetch cryptocurrency prices from CoinMarketCap API and forex prices from ExchangeRate API"
readme = "README.md"
license = "MIT"
license-files = ["License.md"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
Homepage = "https://github.com/droonacharyakochelo/coinmarketcap_exchangerate"
Documentation = "https://github.com/droonacharyakochelo/coinmarketcap_exchangerate#readme"
Repository = "https://github.com/droonacharyakochelo/coinmarketcap_exchangerate.git"
